fix tooltip positioning, including on mobile

--- a/src/assets/css/main.css
+++ b/src/assets/css/main.css
@@ -76,17 +76,25 @@ text {
   font-weight: 500;
   line-height: 1.4;
 }
+/* css for tooltips */
 .tooltip-span {
   position: relative;
   cursor: pointer;
   display: inline-block;
-  border-bottom: 1px dotted rgba(54, 54, 54, 0.8);
+  text-decoration: underline;
+  text-decoration-style: dotted;
+  text-decoration-thickness: 1px;
+  text-decoration-color: rgba(54, 54, 54, 0.8);
+  text-underline-offset: 20%;
   font-weight: 700;
   z-index: 10;
 }
 .tooltiptext {
+  font-size: 2rem;
+  font-weight: 400;
+  line-height: 1.3;
   visibility: hidden;
-  width: 380px;
+  width: max(200%, 200px);
   background-color: #555;
   color: #fff;
   text-align: center;
@@ -94,10 +102,19 @@ text {
   padding: 0.9rem 0.65rem;
   position: absolute;
   z-index: 1;
-  margin-left: -170px;
-  margin-top: 2.3rem;
   opacity: 0;
+  top: 90%;
+  left: 50%;
+  transform: translate(-50%, 0%);
   transition: opacity 0.3s;
+  /* ----------- Phones ----------- */
+  @media only screen and (max-width: 600px) {
+    width: calc(95vw - 6rem); /*Don't let tooltip width exceed viewport width*/
+  }
+}
+.tooltip-left {
+  left: 0;
+  transform: none;
 }
 .tooltip-group:hover .tooltiptext {
   visibility: visible;
